DTOs + mapping DTOs<->Entities App is up and running